tests/snapshots/run_wpt_conformance__onnx_transpose_float16_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "transpose.https.any.js",
    "transpose float16 1D tensor default options",
    "onnx",
    "PASS",
)
