tests/snapshots/run_wpt_conformance__onnx_transpose_float32_1D_tensor_options_permutation.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "transpose.https.any.js",
    "transpose float32 1D tensor options.permutation",
    "onnx",
    "PASS",
)
